# lava-mcp

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: interactive-image.yml  ser2net-proxy-image.yml  server-image.yml
docs/: roadmap.md  security.md
interactive/: Dockerfile  lava-gateway-connect  ssh-gateway.yaml
interactive/ser2net-proxy/: Dockerfile  console-connect.sh  console-proxy.py  docker-compose.host.yml  docker-compose.yml  test-job-qcs615.yaml
lava_mcp/: __init__.py  client.py  cmdline.py  config.py  gateway.py  jobs.py  server.py
tests/: test_client.py  test_gateway.py  test_server.py
