[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lava-mcp"
version = "0.1.0"
description = "MCP server exposing a LAVA instance to agents"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "Matt Hart" }]
dependencies = [
    "mcp>=1.0",
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "responses>=0.23",
    "black",
    "isort",
    "mypy",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
lava-mcp = "lava_mcp.cmdline:main"

[tool.setuptools.packages.find]
include = ["lava_mcp*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
