[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lava-mcp"
version = "0.1.0"
description = "MCP server exposing a LAVA instance to agents"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "Matt Hart" }]
dependencies = [
    "mcp>=1.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "asyncssh>=2.14",
    # WebSocket bridge that fronts the SSH gateway so the dial-out/consumer SSH
    # streams are carried over wss://.../gateway-ssh (443, via Caddy).
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "responses>=0.23",
    "black",
    "isort",
    "mypy",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
lava-mcp = "lava_mcp.cmdline:main"

[tool.setuptools.packages.find]
include = ["lava_mcp*"]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
